refactor(coupon) 결제 시 사용 가능 쿠폰 기능 수정 및 코드 리펙토링